# insurance-claim-ai-assistant

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
backend/app/: api.py  main.py
backend/app/agents/: __init__.py  base.py  functional.py  orchestrator.py  technical.py
backend/app/agents/functional_agents/: __init__.py  general.py  home.py
backend/app/agents/technical_agents/: __init__.py  coverage.py  documents.py  extraction.py  retrieval.py  shared.py  validation.py  vision.py
backend/app/schemas/: __init__.py  agent.py  claim.py
backend/app/services/: model_client.py  retrieval.py  text_extraction.py
backend/config/: config.dev.json  config.env.json  config.prod.json
backend/requirements/: base.txt  dev.txt  prod.txt
backend/src/: config.py  main.py
backend/src/api/: main.py  routes.py  routes_api.py  schemas.py
backend/src/config/: settings.py
backend/src/core/agents/: __init__.py  base.py  constants.py  orchestrator.py
backend/src/core/agents/orchestrator/: __init__.py  (+3 more)
backend/src/core/models/: __init__.py  agent.py  claim.py
backend/src/core/schemas/: __init__.py  claim.py
backend/src/data/: retrieval.py  text_extraction.py
backend/src/models/: model_client.py
backend/src/utils/: agent_logger.py  app_logger.py
backend/tests/: test_agents.py
backend/tests/e2e/: README.md
backend/tests/integration/: test_agents.py  test_api.py
backend/tests/unit/: test_config.py  test_model_client.py  test_retrieval.py  test_text_extraction.py
(+56 files in other folders)
